--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,12 @@
   align-items: center;
   justify-content: center;
   padding: 15px;
-  background: linear-gradient(to left, #21d4fd, #b721ff);
+  background-image: linear-gradient(
+    -225deg,
+    #473b7b 0%,
+    #3584a7 51%,
+    #30d2be 100%
+  );
 }
 .wrap-login {
   width: 390px;
@@ -31,7 +36,7 @@
 .login-form-title {
   display: block;
   font-size: 30px;
-  background: -webkit-linear-gradient(#21d4fd, #b721ff);
+  background: -webkit-linear-gradient(#473b7b 0%, #3584a7 51%, #30d2be 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   line-height: 1.2;
@@ -94,10 +99,25 @@
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   -moz-transition: all 0.4s;
-  background: -webkit-linear-gradient(to left, #21d4fd, #b721ff);
-  background: -o-linear-gradient(to left, #21d4fd, #b721ff);
-  background: -moz-linear-gradient(to left, #21d4fd, #b721ff);
-  background: linear-gradient(to left, #21d4fd, #b721ff);
+  background: -webkit-linear-gradient(
+    to left,
+    #473b7b 0%,
+    #3584a7 51%,
+    #30d2be 100%
+  );
+  background: -o-linear-gradient(
+    to left,
+    #473b7b 0%,
+    #3584a7 51%,
+    #30d2be 100%
+  );
+  background: -moz-linear-gradient(
+    to left,
+    #473b7b 0%,
+    #3584a7 51%,
+    #30d2be 100%
+  );
+  background: linear-gradient(to left, #473b7b 0%, #3584a7 51%, #30d2be 100%);
 }
 .focus-input::after {
   font-size: 15px;
@@ -154,10 +174,25 @@
   align-items: center;
   width: 100%;
   height: 50px;
-  background: -webkit-linear-gradient(to left, #21d4fd, #b721ff);
-  background: -o-linear-gradient(to left, #21d4fd, #b721ff);
-  background: -moz-linear-gradient(to left, #21d4fd, #b721ff);
-  background: linear-gradient(to left, #21d4fd, #b721ff);
+  background: -webkit-linear-gradient(
+    to left,
+    #473b7b 0%,
+    #3584a7 51%,
+    #30d2be 100%
+  );
+  background: -o-linear-gradient(
+    to left,
+    #473b7b 0%,
+    #3584a7 51%,
+    #30d2be 100%
+  );
+  background: -moz-linear-gradient(
+    to left,
+    #473b7b 0%,
+    #3584a7 51%,
+    #30d2be 100%
+  );
+  background: linear-gradient(to left, #473b7b 0%, #3584a7 51%, #30d2be 100%);
 }
 .login-form-btn:hover {
   cursor: pointer;
