feat: modificado cor do link de cadastro

--- a/src/styles.css
+++ b/src/styles.css
@@ -212,7 +212,7 @@
 }
 .link-text-for-signup {
   font-size: 14px;
-  color: #6a7dfe;
+  color: #3584a7;
   line-height: 1.5;
   text-decoration: none;
 }
