--- a/src/components/button/styles.css
+++ b/src/components/button/styles.css
@@ -16,25 +16,10 @@
   align-items: center;
   width: 100%;
   height: 50px;
-  background: -webkit-linear-gradient(
-    to left,
-    #473b7b 0%,
-    #3584a7 51%,
-    #30d2be 100%
-  );
-  background: -o-linear-gradient(
-    to left,
-    #473b7b 0%,
-    #3584a7 51%,
-    #30d2be 100%
-  );
-  background: -moz-linear-gradient(
-    to left,
-    #473b7b 0%,
-    #3584a7 51%,
-    #30d2be 100%
-  );
-  background: linear-gradient(to left, #473b7b 0%, #3584a7 51%, #30d2be 100%);
+  background: -webkit-linear-gradient(135deg, #3498db, #87cefa);
+  background: -o-linear-gradient(135deg, #3498db, #87cefa);
+  background: -moz-linear-gradient(135deg, #3498db, #87cefa);
+  background: linear-gradient(135deg, #3498db, #87cefa);
 }
 [class*="btn-"]:hover {
   cursor: pointer;
