--- a/src/components/input/styles.css
+++ b/src/components/input/styles.css
@@ -38,25 +38,10 @@
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   -moz-transition: all 0.4s;
-  background: -webkit-linear-gradient(
-    to left,
-    #473b7b 0%,
-    #3584a7 51%,
-    #30d2be 100%
-  );
-  background: -o-linear-gradient(
-    to left,
-    #473b7b 0%,
-    #3584a7 51%,
-    #30d2be 100%
-  );
-  background: -moz-linear-gradient(
-    to left,
-    #473b7b 0%,
-    #3584a7 51%,
-    #30d2be 100%
-  );
-  background: linear-gradient(to left, #473b7b 0%, #3584a7 51%, #30d2be 100%);
+  background: -webkit-linear-gradient(135deg, #3498db, #87cefa);
+  background: -o-linear-gradient(135deg, #3498db, #87cefa);
+  background: -moz-linear-gradient(135deg, #3498db, #87cefa);
+  background: linear-gradient(135deg, #3498db, #87cefa);
 }
 .focus-input::after {
   font-size: 15px;
