--- a/src/pages/Login/login-form-styles.css
+++ b/src/pages/Login/login-form-styles.css
@@ -19,7 +19,7 @@
 }
 .link-text-for-signup {
   font-size: 14px;
-  color: #3584a7;
+  color: #87cefa;
   line-height: 1.5;
   text-decoration: none;
 }
