feat: modificações nas estilizações de cores

--- a/src/components/form/styles.css
+++ b/src/components/form/styles.css
@@ -10,9 +10,7 @@
 [class*="form-title-"] {
   display: block;
   font-size: 30px;
-  background: -webkit-linear-gradient(135deg, #3498db, #87cefa);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #ffff;
   line-height: 1.2;
   text-align: center;
   margin-bottom: 30px;
