--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -11,7 +11,7 @@
   align-items: center;
   justify-content: center;
   padding: 15px;
-  background-image: linear-gradient(135deg, #3498db, #87cefa);
+  background-image: linear-gradient(135deg, #002f87, #f46214);
 }
 .wrap-login {
   width: 390px;
