--- a/src/components/button/styles.css
+++ b/src/components/button/styles.css
@@ -16,10 +16,7 @@
   align-items: center;
   width: 100%;
   height: 50px;
-  background: -webkit-linear-gradient(135deg, #3498db, #87cefa);
-  background: -o-linear-gradient(135deg, #3498db, #87cefa);
-  background: -moz-linear-gradient(135deg, #3498db, #87cefa);
-  background: linear-gradient(135deg, #3498db, #87cefa);
+  background: linear-gradient(117deg, #1c53ba 0%, #ff8747 99.99%, #d94b00 100%);
 }
 [class*="btn-"]:hover {
   cursor: pointer;
