--- a/src/pages/Signup/signup-form-styles.css
+++ b/src/pages/Signup/signup-form-styles.css
@@ -19,7 +19,7 @@
 }
 .link-text-for-login {
   font-size: 14px;
-  color: #87cefa;
+  color: #ff8747;
   line-height: 1.5;
   text-decoration: none;
 }
